--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -1,11 +1,11 @@
 use_ff: true # use feedforward
-visual: true #publish visualization stuff
+visual: false #publish visualization stuff
 color_type: "vel" #"vel" or "plain"
 n_agents: 16 #only used for the color visualization
 
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
 goal_radius: 0.05    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
-drone_radius: 0.05  #(m) Used for collision checking
+drone_radius: 0.15  #(m) Used for collision checking
 
 w_max: 1.0           # [rd/s] Maximum angular velocity. 0.4 for Hardware
 alpha_filter_dyaw: 0 #was 0.92  #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
@@ -26,7 +26,7 @@ alpha_filter_dyaw: 0 #was 0.92  #[] Filter parameter for dyaw, \in [0,1]. Higher
 #R_consider_obstacles: 7.0    # [m] Other obstacles are considered if they are closer than Rothers.
 ##########################################
 
-Ra: 4.5           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
+Ra: 200.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
 x_min: -1000000000.0  # [m] don't forget the .0
 x_max: 10000000000.0  # [m] don't forget the .0
@@ -38,8 +38,8 @@ z_ground: -100.0         #[m] points below this are considered ground
 z_max: 100.0         #[m] JPS is not allowed to give a solution that goes higher than this height
 
 #For multi-agent simulations
-v_max: [2.5, 2.5, 2.5]   #[m/s]  
-a_max: [30.0, 30.0, 9.6]   #[m/s2] 
+v_max: [1.7, 1.7, 1.7]   #[m/s]  
+a_max: [6.2, 6.2, 6.2]   #[m/s2]  
 
 
 #For single-agent simulations
@@ -51,7 +51,7 @@ a_max: [30.0, 30.0, 9.6]   #[m/s2]
 factor_alpha: 1.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
 
 #Parameters for NLOPT
-num_pol: 3
+num_pol: 4
 deg_pol: 3
 weight: 1000.0 #The .0 is needed #10000  #1000000
 epsilon_tol_constraints: 0.000001
@@ -94,10 +94,10 @@ res_plot_traj: 15.0  #Higher --> More resolution when plotting the trajectory
 
 factor_v_max: 1.0 #\in [0,1]. Used to find the total duration of a given trajectory.
 
-alpha_shrink: 0.9 #\in [0,1] Only used for MINVO/Bezier
+alpha_shrink: 0.92 #\in [0,1] Only used for MINVO/Bezier
 
 
-alpha: 0.05 #[m] Error in position
-beta: 0.03 #[m] Deviation between the trajectory and the segment between two discretization points
+alpha: 0.0 #[m] Error in position
+beta: 0.0 #[m] Deviation between the trajectory and the segment between two discretization points
 gamma: 0.1 #[seconds] >0 Time step between discretization points
 
