--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -1,5 +1,5 @@
 use_ff: true # use feedforward
-visual: false #publish visualization stuff
+visual: true #publish visualization stuff
 color_type: "vel" #"vel" or "plain"
 n_agents: 16 #only used for the color visualization
 
@@ -34,8 +34,8 @@ x_max: 10000000000.0  # [m] don't forget the .0
 y_min: -1000000000.0  # [m] don't forget the .0
 y_max: 1000000000.0 # [m] don't forget the .0
 
-z_ground: -10.0         #[m] points below this are considered ground
-z_max: 4.5         #[m] JPS is not allowed to give a solution that goes higher than this height
+z_ground: -100.0         #[m] points below this are considered ground
+z_max: 100.0         #[m] JPS is not allowed to give a solution that goes higher than this height
 
 #For multi-agent simulations
 v_max: [2.5, 2.5, 2.5]   #[m/s]  
