--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -5,7 +5,7 @@ n_agents: 16 #only used for the color in the trajectory
 
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
 goal_radius: 0.05    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
-drone_radius: 0.05  #(m) Used for collision checking
+drone_radius: 0.0000001  #(m) Used for collision checking
 
 w_max: 1.0           # [rd/s] Maximum angular velocity. 0.4 for Hardware
 alpha_filter_dyaw: 0 #was 0.92  #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
@@ -26,32 +26,32 @@ alpha_filter_dyaw: 0 #was 0.92  #[] Filter parameter for dyaw, \in [0,1]. Higher
 #R_consider_obstacles: 7.0    # [m] Other obstacles are considered if they are closer than Rothers.
 ##########################################
 
-Ra: 4.5           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
+Ra: 4.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
 x_min: -1000000000.0  # [m] don't forget the .0
 x_max: 10000000000.0  # [m] don't forget the .0
 
-y_min: -1000000000.0  # [m] don't forget the .0
-y_max: 1000000000.0 # [m] don't forget the .0
+y_min: -5.0  # [m] don't forget the .0
+y_max: 5.0 # [m] don't forget the .0
 
-z_ground: -100.0         #[m] points below this are considered ground
+z_ground: 0.2         #[m] points below this are considered ground
 z_max: 4.0         #[m] JPS is not allowed to give a solution that goes higher than this height
 
 #For multi-agent simulations
-v_max: [2.5, 2.5, 2.5]   #[m/s]  
-a_max: [30.0, 30.0, 9.6]   #[m/s2] 
+# v_max: [2.5, 2.5, 2.5]   #[m/s]  
+# a_max: [30.0, 30.0, 9.6]   #[m/s2] 
 
 
 #For single-agent simulations
-# v_max: [5.0, 5.0, 5.0]   #[m/s]  7.0
-# a_max: [20.0, 20.0, 9.6]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
+v_max: [5.0, 5.0, 5.0]   #[m/s]  7.0
+a_max: [20.0, 20.0, 9.6]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
 
 
 
 factor_alpha: 1.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
 
 #Parameters for NLOPT
-num_pol: 3
+num_pol: 4
 deg_pol: 3
 weight: 1000.0 #The .0 is needed #10000  #1000000
 epsilon_tol_constraints: 0.000001
@@ -83,10 +83,10 @@ mu: 0.15    #% of time spent to solve the optimization
 a_star_samp_x: 5
 a_star_samp_y: 5 
 a_star_samp_z: 5 
-a_star_fraction_voxel_size: 0.0 #\in [0,1] The higher, the bigger the voxel size in A* is(i.e. more prunning)
+a_star_fraction_voxel_size: 0.5 #\in [0,1] The higher, the bigger the voxel size in A* is(i.e. more prunning)
 allow_infeasible_guess: true  #whether allow infeasible guesses to be used for the optimization. If false, straight line guess will be used in the case of an infeasible guess
 
-a_star_bias: 7.0 #Bias (cost=g+bias*h) in the A* search 
+a_star_bias: 1.0 #Bias (cost=g+bias*h) in the A* search 
 
 basis: "MINVO"  #MINVO OR B_SPLINE or BEZIER This is the basis used only for collision checking
 
@@ -94,10 +94,10 @@ res_plot_traj: 15.0  #Higher --> More resolution when plotting the trajectory
 
 factor_v_max: 1.0 #\in [0,1]. Used to find the total duration of a given trajectory.
 
-alpha_shrink: 0.9 #\in [0,1] Only used for MINVO/Bezier
+alpha_shrink: 0.95 #\in [0,1] Only used for MINVO/Bezier
 
 
-alpha: 0.03 #[m] Error in position
-beta: 0.03 #[m] Deviation between the trajectory and the segment between two discretization points
+alpha: 0.0 #[m] Error in position
+beta: 0.0 #[m] Deviation between the trajectory and the segment between two discretization points
 gamma: 0.1 #[seconds] >0 Time step between discretization points
 
