--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "acl-gazebo"]
 	path = submodules/acl-gazebo
-	url = https://gitlab.com/mit-acl/lab/acl-gazebo
+	url = hhttps://gitlab.com/mit-acl/lab/acl-gazebo.git
 	branch = master
 [submodule "catkin_simple"]
 	path = submodules/catkin_simple
@@ -16,5 +16,5 @@
 	branch = master
 [submodule "snapstack_msgs"]
 	path = submodules/snapstack_msgs
-	url = https://gitlab.com/mit-acl/fsw/snap-stack/snapstack_msgs
+	url = https://gitlab.com/mit-acl/fsw/snap-stack/snapstack_msgs.git
 	branch = master
