--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -8,7 +8,7 @@ goal_radius: 0.05    #(m) Drone has arrived to the goal when distance_to_goal<GO
 drone_radius: 0.001  #(m) Used for collision checking
 
 w_max: 1.0           # [rd/s] Maximum angular velocity. 0.4 for Hardware
-alpha_filter_dyaw: 0 #was 0.92  #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
+alpha_filter_dyaw: 0 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
 
 Ra: 4.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
@@ -16,7 +16,7 @@ x_min: -1000000000.0  # [m] don't forget the .0
 x_max: 10000000000.0  # [m] don't forget the .0
 
 y_min: -1000000000.0  # [m] don't forget the .0
-y_max: 1000000000.0 # [m] don't forget the .0
+y_max: 1000000000.0   # [m] don't forget the .0
 
 z_ground: -1000000000.0         #[m] points below this are considered ground
 z_max: 1000000000.0         #[m] JPS is not allowed to give a solution that goes higher than this height
@@ -36,8 +36,8 @@ factor_alpha: 1.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
 
 #Parameters for NLOPT
 num_pol: 4
-deg_pol: 3
-weight: 1000.0 #The .0 is needed #10000  #1000000
+deg_pol: 3 #Only 3 is supported right now
+weight: 1000.0 #The .0 is needed 
 epsilon_tol_constraints: 0.000001
 xtol_rel: 0.0000000000001 #negative value --> stopping criterion not used
 ftol_rel: 0.0000000001 #negative value --> stopping criterion not used
