--- a/mader/package.xml
+++ b/mader/package.xml
@@ -25,8 +25,9 @@
   <build_depend>rviz_visual_tools</build_depend>
   <build_depend>decomp_util</build_depend>
   <build_depend>decomp_ros_utils</build_depend>
-  <build_depend>separator</build_depend>
-
+  <build_depend>separator</build_depend>  
+  <build_depend>jsk_rviz_plugins</build_depend> 
+  
  <!--
   <build_depend>decomp_util</build_depend>
   <build_depend>decomp_ros_utils</build_depend>
