--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -92,10 +92,10 @@ gamma: 0.1 #[seconds] >0 Time step between discretization points
 # impose_fov: false
 # R_local_map: 5.5 #[m] Trajectories from obstacles/agents whose center falls inside this local map are stored
 
-#####Only used if impose_fov==true
-# fov_horiz_deg: 100 #[deg] \in (0,180] ,  angle between two faces of the tetrahedron 
-# fov_vert_deg: 100 #[deg] \in (0,180] ,  angle between two faces of the tetrahedron 
-# fov_depth: 4.5 #[m] Should be < Ra
+##### Not used in the MADER algorithm
+fov_horiz_deg: 100 #[deg] \in (0,180] ,  angle between two faces of the tetrahedron 
+fov_vert_deg: 100 #[deg] \in (0,180] ,  angle between two faces of the tetrahedron 
+fov_depth: 4.5 #[m] Should be < Ra
 
 #####If impose_fov==false
 #R_consider_agents: 900       # [m] Other agents are considered if they are closer than Rothers. Should be >=2*Ra (because this ensures that the other agent hasn't planned a trajectory that enters my sphere of radius Ra)
