small example for nlopt

--- a/mader/CMakeLists.txt
+++ b/mader/CMakeLists.txt
@@ -90,6 +90,9 @@ add_executable(test_utils src/examples/test_utils.cpp)
 add_dependencies(test_utils ${catkin_EXPORTED_TARGETS})
 target_link_libraries(test_utils ${catkin_LIBRARIES} utils)
 
+add_executable(test_nlopt src/examples/test_nlopt.cpp)
+add_dependencies(test_nlopt ${catkin_EXPORTED_TARGETS})
+target_link_libraries(test_nlopt ${catkin_LIBRARIES} utils solver_nlopt)
 
 add_executable(test_bspline_utils src/examples/test_bspline_utils.cpp src/bspline_utils.cpp)
 add_dependencies(test_bspline_utils ${catkin_EXPORTED_TARGETS})
