gurobi + nlopt option

--- a/mader/CMakeLists.txt
+++ b/mader/CMakeLists.txt
@@ -9,22 +9,20 @@ add_definitions(-std=c++11)
 find_package( Eigen3 REQUIRED )
 include_directories(${EIGEN3_INCLUDE_DIR})
 
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}")
-find_package(GUROBI REQUIRED)
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_finders")
 
-if(GUROBI_FOUND)
-  message(STATUS "GUROBI FOUND")
-else(GUROBI_FOUND)
-  message(FATAL_ERROR "GUROBI NOT FOUND!")
-endif(GUROBI_FOUND)
 
-find_package(NLOPT REQUIRED)
 find_package(CGAL REQUIRED)
+
+
+option(USE_GUROBI "Use GUROBI as the solver" ON) #if OFF, then it will use NLOPT as the solver
+
+
 include(${CGAL_USE_FILE})
 
 set(CMAKE_BUILD_TYPE Release) #From terminal: catkin config -DCMAKE_BUILD_TYPE=Release (or RelWithDebInfo) or Debug
 
-include_directories(${GUROBI_INCLUDE_DIRS})
+
 
 find_package(catkin REQUIRED COMPONENTS 
 	roscpp
@@ -36,7 +34,7 @@ find_package(catkin REQUIRED COMPONENTS
 	decomp_ros_utils
 	rviz_visual_tools
 	separator
-  jsk_rviz_plugins
+  	jsk_rviz_plugins
 )
 find_package(decomp_util REQUIRED)
 include_directories(${DECOMP_UTIL_INCLUDE_DIRS})
@@ -44,8 +42,6 @@ include_directories(${DECOMP_UTIL_INCLUDE_DIRS})
 catkin_package()
 
 include_directories(${catkin_INCLUDE_DIRS} include)
-
-set(GUROBI_LIBRARIES "$ENV{GUROBI_HOME}/lib/libgurobi_c++.a;$ENV{GUROBI_HOME}/lib/libgurobi91.so;$ENV{GUROBI_HOME}/lib/" )
 
 #For precompile headers see example here
 #https://gitlab.kitware.com/cmake/cmake/tree/375d01c6808713a0cfeef9ea092c8236ba063525/Tests/PrecompileHeaders
@@ -62,18 +58,46 @@ add_library(octopus_search STATIC src/octopus_search.cpp src/bspline_utils.cpp s
 target_include_directories (octopus_search PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(octopus_search PUBLIC ${catkin_LIBRARIES}) 
 
+if(USE_GUROBI)
 
-add_library(solver_nlopt STATIC src/solver_nlopt.cpp src/bspline_utils.cpp src/nlopt_utils.cpp )
-target_include_directories (solver_nlopt PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${DECOMP_UTIL_INCLUDE_DIRS})
-target_link_libraries(solver_nlopt PUBLIC ${NLOPT_LIBRARIES} ${DECOMP_UTIL_LIBRARIES} utils octopus_search ${catkin_LIBRARIES} cgal_utils)
+	find_package(GUROBI REQUIRED)
 
-add_library(solver_gurobi STATIC src/solver_gurobi.cpp src/bspline_utils.cpp src/nlopt_utils.cpp src/solver_gurobi_utils.cpp src/solver_gurobi_guess.cpp)
-target_include_directories (solver_gurobi PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${DECOMP_UTIL_INCLUDE_DIRS})
-target_link_libraries(solver_gurobi PUBLIC ${NLOPT_LIBRARIES} ${GUROBI_LIBRARIES} ${DECOMP_UTIL_LIBRARIES} utils octopus_search ${catkin_LIBRARIES} cgal_utils)
+	if(GUROBI_FOUND)
+	  message(STATUS "GUROBI FOUND")
+	else(GUROBI_FOUND)
+	  message(FATAL_ERROR "GUROBI NOT FOUND!")
+	endif(GUROBI_FOUND)
 
-# enable_unity_build(UNITY_BUILD_NAME src/mader_node.cpp)
+	include_directories(${GUROBI_INCLUDE_DIRS})
+	file(GLOB GurobiSOFiles $ENV{GUROBI_HOME}/lib/libgurobi*[0-9].so) #files that are start with libgurobi and end with number.so
+	set(GUROBI_LIBRARIES "$ENV{GUROBI_HOME}/lib/libgurobi_c++.a;${GurobiSOFiles};$ENV{GUROBI_HOME}/lib/" )
+
+	add_library(solver STATIC src/solver_gurobi.cpp src/bspline_utils.cpp src/solver_gurobi_utils.cpp src/solver_gurobi_guess.cpp)
+	target_compile_definitions(solver PUBLIC USE_GUROBI_FLAG=1) 
+	target_include_directories (solver PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${DECOMP_UTIL_INCLUDE_DIRS})
+	target_link_libraries(solver PUBLIC ${GUROBI_LIBRARIES} ${DECOMP_UTIL_LIBRARIES} utils octopus_search ${catkin_LIBRARIES} cgal_utils)
+
+	add_executable(test_gurobi src/examples/test_gurobi.cpp)
+	add_dependencies(test_gurobi ${catkin_EXPORTED_TARGETS})
+	target_link_libraries(test_gurobi ${catkin_LIBRARIES} utils ${GUROBI_LIBRARIES} solver)
+
+else()
+	find_package(NLOPT REQUIRED)
+
+	add_library(solver STATIC src/solver_nlopt.cpp src/bspline_utils.cpp src/nlopt_utils.cpp )
+	target_compile_definitions(solver PUBLIC USE_GUROBI_FLAG=0) 
+	target_include_directories (solver PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${DECOMP_UTIL_INCLUDE_DIRS})
+	target_link_libraries(solver PUBLIC ${NLOPT_LIBRARIES} ${DECOMP_UTIL_LIBRARIES} utils octopus_search ${catkin_LIBRARIES} cgal_utils)
+
+	add_executable(test_nlopt src/examples/test_nlopt.cpp)
+	add_dependencies(test_nlopt ${catkin_EXPORTED_TARGETS})
+	target_link_libraries(test_nlopt ${catkin_LIBRARIES} utils solver)
+
+endif()
+
+
 add_executable(${PROJECT_NAME}_node src/mader_node.cpp src/mader_ros.cpp src/mader.cpp )
-target_link_libraries(${PROJECT_NAME}_node PUBLIC ${catkin_LIBRARIES}  solver_nlopt  solver_gurobi utils)  #${CGAL_LIBS}
+target_link_libraries(${PROJECT_NAME}_node PUBLIC ${catkin_LIBRARIES}  solver utils)  #${CGAL_LIBS}
 add_dependencies(${PROJECT_NAME}_node ${catkin_EXPORTED_TARGETS} )
 
 add_executable(test_octopus_search src/examples/test_octopus_search.cpp src/octopus_search.cpp src/bspline_utils.cpp) 
@@ -84,17 +108,12 @@ add_executable(test_utils src/examples/test_utils.cpp)
 add_dependencies(test_utils ${catkin_EXPORTED_TARGETS})
 target_link_libraries(test_utils ${catkin_LIBRARIES} utils)
 
-add_executable(test_nlopt src/examples/test_nlopt.cpp)
-add_dependencies(test_nlopt ${catkin_EXPORTED_TARGETS})
-target_link_libraries(test_nlopt ${catkin_LIBRARIES} utils solver_nlopt)
-
-add_executable(test_gurobi src/examples/test_gurobi.cpp)
-add_dependencies(test_gurobi ${catkin_EXPORTED_TARGETS})
-target_link_libraries(test_gurobi ${catkin_LIBRARIES} utils ${GUROBI_LIBRARIES} solver_gurobi)
 
 add_executable(test_bspline_utils src/examples/test_bspline_utils.cpp src/bspline_utils.cpp)
 add_dependencies(test_bspline_utils ${catkin_EXPORTED_TARGETS})
 target_link_libraries(test_bspline_utils ${catkin_LIBRARIES})
+
+unset(USE_GUROBI CACHE) # To avoid https://stackoverflow.com/questions/22481647/cmake-if-else-with-option
 
 
 # add_library(mader STATIC src/mader.cpp src/mader.hpp)
@@ -115,8 +134,3 @@ target_link_libraries(test_bspline_utils ${catkin_LIBRARIES})
 # add_executable(test_predictor_node src/test_predictor.cpp src/predictor.cpp src/bspline_utils.cpp)
 # add_dependencies(test_predictor_node ${catkin_EXPORTED_TARGETS})
 # target_link_libraries(test_predictor_node ${catkin_LIBRARIES} utils)
-
-
-# add_executable(test_cvxgen src/solvers/cvxgen/test_cvxgen.cpp src/solvers/cvxgen/solver_cvxgen.cpp)
-# add_dependencies(test_cvxgen ${catkin_EXPORTED_TARGETS})
-# target_link_libraries(test_cvxgen ${catkin_LIBRARIES} ${catkin_LIBRARIES} ${CMAKE_CURRENT_LIST_DIR}/src/solvers/cvxgen/cvxgen/libcvx.so)
