--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -18,7 +18,7 @@ x_max: 10000000000.0  # [m] don't forget the .0
 y_min: -1000000000.0  # [m] don't forget the .0
 y_max: 1000000000.0   # [m] don't forget the .0
 
-z_ground: -1000000000.0         #[m] points below this are considered ground
+z_min: -1000000000.0         #[m] points below this are considered ground
 z_max: 1000000000.0         #[m] JPS is not allowed to give a solution that goes higher than this height
 
 #For multi-agent simulations
