--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -18,8 +18,8 @@ x_max: 10000000000.0  # [m] don't forget the .0
 y_min: -1000000000.0  # [m] don't forget the .0
 y_max: 1000000000.0   # [m] don't forget the .0
 
-z_min: -1000000000.0         #[m] points below this are considered ground
-z_max: 1000000000.0         #[m] JPS is not allowed to give a solution that goes higher than this height
+z_min: -1000000000.0  # [m] points below this are considered ground
+z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes higher than this height
 
 #For multi-agent simulations
 # v_max: [2.5, 2.5, 2.5]   #[m/s]  
@@ -29,8 +29,6 @@ z_max: 1000000000.0         #[m] JPS is not allowed to give a solution that goes
 #For single-agent simulations
 v_max: [5.0, 5.0, 5.0]   #[m/s]  7.0
 a_max: [20.0, 20.0, 9.6]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
-
-
 
 factor_alpha: 1.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
 
@@ -86,18 +84,8 @@ beta: 0.0 #[m] Deviation between the trajectory and the segment between two disc
 gamma: 0.1 #[seconds] >0 Time step between discretization points
 
 
-##########################################
-##Needed: Ra <= fov_depth  <= R_local_map
-##Agents/obstacles from which I am allowed to receive information:
-# impose_fov: false
-# R_local_map: 5.5 #[m] Trajectories from obstacles/agents whose center falls inside this local map are stored
-
-##### Not used in the MADER algorithm
+##### Not used right now in the MADER algorithm
 fov_horiz_deg: 100 #[deg] \in (0,180] ,  angle between two faces of the tetrahedron 
 fov_vert_deg: 100 #[deg] \in (0,180] ,  angle between two faces of the tetrahedron 
 fov_depth: 4.5 #[m] Should be < Ra
 
-#####If impose_fov==false
-#R_consider_agents: 900       # [m] Other agents are considered if they are closer than Rothers. Should be >=2*Ra (because this ensures that the other agent hasn't planned a trajectory that enters my sphere of radius Ra)
-#R_consider_obstacles: 7.0    # [m] Other obstacles are considered if they are closer than Rothers.
-##########################################
