--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -5,7 +5,7 @@ n_agents: 16 #only used for the color in the trajectory
 
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
 goal_radius: 0.05    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
-drone_radius: 0.008  #(m) Used for collision checking
+drone_radius: 0.05  #(m) Used for collision checking
 
 w_max: 5.0           # [rd/s] Maximum angular velocity. 0.4 for Hardware
 alpha_filter_dyaw: 0 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
@@ -64,7 +64,7 @@ basis: "MINVO"  #MINVO OR B_SPLINE or BEZIER.  This is the basis used for collis
 
 res_plot_traj: 15.0  #Higher --> More resolution when plotting the trajectory 
 
-factor_v_max: 1.0 #\in [0,1]. Used to find the total duration of a given trajectory.
+factor_alloc: 1.0 #>=1. Used to find the total duration of a given trajectory.
 
 alpha_shrink: 0.95 #\in [0,1] Only used for MINVO/Bezier
 
