--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -7,7 +7,9 @@ dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer
 goal_radius: 0.05    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
 drone_radius: 0.05  #(m) Used for collision checking
 
-w_max: 5.0           # [rd/s] Maximum angular velocity. 0.4 for Hardware
+#w_max: 5.0           # [rd/s] Maximum angular velocity. 0.4 for Hardware
+w_max: 0.4
+
 alpha_filter_dyaw: 0 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
 
 Ra: 4.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
