--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -30,6 +30,7 @@ z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes high
 #For single-agent simulations
 v_max: [3.5, 3.5, 3.5]   #[m/s]  7.0
 a_max: [20.0, 20.0, 9.6]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
+j_max: [30.0, 30.0, 30.0]   #[m/s3]
 
 factor_alpha: 1.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
 
