mader param update - less aggressive

--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -14,14 +14,24 @@ alpha_filter_dyaw: 0 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More 
 
 Ra: 4.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
-x_min: -1000000000.0  # [m] don't forget the .0
-x_max: 10000000000.0  # [m] don't forget the .0
+#x_min: -1000000000.0  # [m] don't forget the .0
+#x_max: 10000000000.0  # [m] don't forget the .0
 
-y_min: -1000000000.0  # [m] don't forget the .0
-y_max: 1000000000.0   # [m] don't forget the .0
+#y_min: -1000000000.0  # [m] don't forget the .0
+#y_max: 1000000000.0   # [m] don't forget the .0
 
-z_min: -1000000000.0  # [m] points below this are considered ground
-z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes higher than this height
+#z_min: -1000000000.0  # [m] points below this are considered ground
+#z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes higher than this height
+
+# highbay
+x_min: -4.0  # [m] don't forget the .0
+x_max: 4.0  # [m] don't forget the .0
+
+y_min: -3.0  # [m] don't forget the .0
+y_max: 3.0   # [m] don't forget the .0
+
+z_min: 0.0  # [m] points below this are considered ground
+z_max: 2.0   # [m] JPS is not allowed to give a solution that goes higher than this height
 
 #For multi-agent simulations
 # v_max: [2.5, 2.5, 2.5]   #[m/s]  
@@ -29,7 +39,7 @@ z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes high
 
 #For single-agent simulations
 v_max: [0.5, 0.5, 0.5]   #[m/s]  7.0
-a_max: [3.0, 3.0, 9.6]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
+a_max: [3.0, 3.0, 3.0]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
 j_max: [4.0, 4.0, 4.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
 
 factor_alpha: 1.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
