--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -24,14 +24,14 @@ Ra: 4.0           # [m] Radius of my planning sphere (planning horizon). Should 
 #z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes higher than this height
 
 # highbay
-x_min: -4.2  # [m] don't forget the .0
-x_max: 4.2  # [m] don't forget the .0
+#x_min: -4.2  # [m] don't forget the .0
+#x_max: 4.2  # [m] don't forget the .0
 
-y_min: -3.5  # [m] don't forget the .0
-y_max: 3.5   # [m] don't forget the .0
+#y_min: -3.5  # [m] don't forget the .0
+#y_max: 3.5   # [m] don't forget the .0
 
-z_min: 0.0  # [m] points below this are considered ground
-z_max: 2.0   # [m] JPS is not allowed to give a solution that goes higher than this height
+#z_min: 0.0  # [m] points below this are considered ground
+#z_max: 2.0   # [m] JPS is not allowed to give a solution that goes higher than this height
 
 #For multi-agent simulations
 # v_max: [2.5, 2.5, 2.5]   #[m/s]  
