--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -14,14 +14,14 @@ alpha_filter_dyaw: 0 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More 
 
 Ra: 4.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
-#x_min: -1000000000.0  # [m] don't forget the .0
-#x_max: 10000000000.0  # [m] don't forget the .0
+x_min: -1000000000.0  # [m] don't forget the .0
+x_max: 10000000000.0  # [m] don't forget the .0
 
-#y_min: -1000000000.0  # [m] don't forget the .0
-#y_max: 1000000000.0   # [m] don't forget the .0
+y_min: -1000000000.0  # [m] don't forget the .0
+y_max: 1000000000.0   # [m] don't forget the .0
 
-#z_min: -1000000000.0  # [m] points below this are considered ground
-#z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes higher than this height
+z_min: -1000000000.0  # [m] points below this are considered ground
+z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes higher than this height
 
 # highbay
 #x_min: -4.2  # [m] don't forget the .0
