--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -5,33 +5,33 @@ n_agents: 16 #only used for the color in the trajectory
 
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
 goal_radius: 0.15    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
-drone_radius: 0.25  #(m) Used for collision checking
+drone_radius: 0.40  #(m) Used for collision checking
 
 #w_max: 5.0           # [rd/s] Maximum angular velocity. 0.4 for Hardware
 w_max: 0.05
 
-alpha_filter_dyaw: 0.5 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
+alpha_filter_dyaw: 0.9 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
 
 Ra: 4.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
-x_min: -1000000000.0  # [m] don't forget the .0
-x_max: 10000000000.0  # [m] don't forget the .0
+#x_min: -1000000000.0  # [m] don't forget the .0
+#x_max: 10000000000.0  # [m] don't forget the .0
 
-y_min: -1000000000.0  # [m] don't forget the .0
-y_max: 1000000000.0   # [m] don't forget the .0
+#y_min: -1000000000.0  # [m] don't forget the .0
+#y_max: 1000000000.0   # [m] don't forget the .0
 
-z_min: -1000000000.0  # [m] points below this are considered ground
-z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes higher than this height
+#z_min: -1000000000.0  # [m] points below this are considered ground
+#z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes higher than this height
 
 # highbay
-#x_min: -4.2  # [m] don't forget the .0
-#x_max: 4.2  # [m] don't forget the .0
+x_min: -4.2  # [m] don't forget the .0
+x_max: 4.2  # [m] don't forget the .0
 
-#y_min: -3.5  # [m] don't forget the .0
-#y_max: 3.5   # [m] don't forget the .0
+y_min: -3.5  # [m] don't forget the .0
+y_max: 3.5   # [m] don't forget the .0
 
-#z_min: 0.0  # [m] points below this are considered ground
-#z_max: 2.0   # [m] JPS is not allowed to give a solution that goes higher than this height
+z_min: 1.0  # [m] points below this are considered ground
+z_max: 4.0   # [m] JPS is not allowed to give a solution that goes higher than this height
 
 #For multi-agent simulations
 # v_max: [2.5, 2.5, 2.5]   #[m/s]  
