--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -7,7 +7,7 @@ dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer
 goal_radius: 0.15    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
 drone_radius: 0.40  #(m) Used for collision checking
 
-#w_max: 5.0           # [rd/s] Maximum angular velocity. 0.4 for Hardware
+#w_max: 0.4           # [rd/s] Maximum angular velocity. 0.4 for Hardware
 w_max: 0.05
 
 alpha_filter_dyaw: 0.9 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
@@ -30,6 +30,9 @@ x_max: 4.2  # [m] don't forget the .0
 y_min: -3.5  # [m] don't forget the .0
 y_max: 3.5   # [m] don't forget the .0
 
+#for simulation
+#z_min: 0.0  # [m] points below this are considered ground
+#for hw
 z_min: 1.0  # [m] points below this are considered ground
 z_max: 4.0   # [m] JPS is not allowed to give a solution that goes higher than this height
 
@@ -38,7 +41,7 @@ z_max: 4.0   # [m] JPS is not allowed to give a solution that goes higher than t
 # a_max: [30.0, 30.0, 9.6]   #[m/s2] 
 
 #For single-agent simulations
-v_max: [0.5, 0.5, 0.5]   #[m/s]  7.0
+v_max: [0.3, 0.3, 0.3]   #[m/s]  7.0
 a_max: [3.0, 3.0, 3.0]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
 j_max: [4.0, 4.0, 4.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
 
