--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -5,10 +5,10 @@ n_agents: 16 #only used for the color in the trajectory
 
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
 goal_radius: 0.15    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
-drone_radius: 0.40  #(m) Used for collision checking
+drone_radius: 0.25  #(m) Used for collision checking
 
-#w_max: 0.4           # [rd/s] Maximum angular velocity. 0.4 for Hardware
-w_max: 0.05
+w_max: 0.4           # [rd/s] Maximum angular velocity. 0.4 for Hardware
+#w_max: 0.05
 
 alpha_filter_dyaw: 0.9 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
 
@@ -31,9 +31,9 @@ y_min: -3.5  # [m] don't forget the .0
 y_max: 3.5   # [m] don't forget the .0
 
 #for simulation
-#z_min: 0.0  # [m] points below this are considered ground
+z_min: 0.0  # [m] points below this are considered ground
 #for hw
-z_min: 1.0  # [m] points below this are considered ground
+#z_min: 1.0  # [m] points below this are considered ground
 z_max: 4.0   # [m] JPS is not allowed to give a solution that goes higher than this height
 
 #For multi-agent simulations
