--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -9,9 +9,9 @@ drone_radius: 0.25  #(m) Used for collision checking # not used anymore replaced
 drone_bbox: [0.7, 0.7, 5.0] #(m) Used for collision checking replacing drone_radius. The bounding box dimension [x y z]
 
 #w_max: 0.4           # [rd/s] Maximum angular velocity. 0.4 for Hardware
-w_max: 0.01
+w_max: 0.0
 
-alpha_filter_dyaw: 0.9 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
+alpha_filter_dyaw: 0.99 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
 
 Ra: 6.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
@@ -21,7 +21,7 @@ Ra: 6.0           # [m] Radius of my planning sphere (planning horizon). Should 
 #y_min: -1000000000.0  # [m] don't forget the .0
 #y_max: 1000000000.0   # [m] don't forget the .0
 
-z_min: -1000000000.0  # [m] points below this are considered ground
+#z_min: -1000000000.0  # [m] points below this are considered ground
 z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes higher than this height
 
 # highbay
@@ -32,17 +32,17 @@ y_min: -4.0  # [m] don't forget the .0
 y_max: 4.0   # [m] don't forget the .0
 
 #for simulation
-#z_min: 0.5  # [m] points below this are considered ground
+z_min: 0.5  # [m] points below this are considered ground
 #for hw
 #z_min: 1.0  # [m] points below this are considered ground
-#z_max: 4.0   # [m] JPS is not allowed to give a solution that goes higher than this height
+z_max: 5.0   # [m] JPS is not allowed to give a solution that goes higher than this height
 
 #For multi-agent simulations
 # v_max: [2.5, 2.5, 2.5]   #[m/s]  
 # a_max: [30.0, 30.0, 9.6]   #[m/s2] 
 
 #For single-agent simulations
-v_max: [0.2, 0.2, 0.2]   #[m/s]  7.0
+v_max: [0.5, 0.5, 0.5]   #[m/s]  7.0
 a_max: [3.0, 3.0, 3.0]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
 j_max: [4.0, 4.0, 4.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
 
