--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -22,7 +22,7 @@ Ra: 6.0           # [m] Radius of my planning sphere (planning horizon). Should 
 #y_max: 1000000000.0   # [m] don't forget the .0
 
 #z_min: -1000000000.0  # [m] points below this are considered ground
-z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes higher than this height
+#z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes higher than this height
 
 # highbay
 x_min: -5.0  # [m] don't forget the .0
@@ -32,8 +32,9 @@ y_min: -4.0  # [m] don't forget the .0
 y_max: 4.0   # [m] don't forget the .0
 
 #for simulation
-z_min: 0.5  # [m] points below this are considered ground
+z_min: 0.0  # [m] points below this are considered ground
 #for hw
+#z_min: 0.5  # [m] points below this are considered ground
 #z_min: 1.0  # [m] points below this are considered ground
 z_max: 5.0
 
