moved fly files

--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -31,17 +31,13 @@ x_max: 5.0  # [m] don't forget the .0
 y_min: -4.0  # [m] don't forget the .0
 y_max: 4.25   # [m] don't forget the .0
 
-#for simulation
-z_min: 1.0  # [m] points below this are considered ground
-#for hw
-#z_min: 0.5  # [m] points below this are considered ground
-#z_min: 1.0  # [m] points below this are considered ground
-z_max: 3.0
+z_min: 1.0  # [m] don't forget the .0
+z_max: 3.0  # [m] don't forget the .0
 
 #For single-agent simulations
-v_max: [2.0, 2.0, 2.0]   #[m/s]  7.0
-a_max: [2.2, 2.2, 2.2]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
-j_max: [2.5, 2.5, 2.5]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
+v_max: [2.5, 2.5, 2.5]   #[m/s]  7.0
+a_max: [2.7, 2.7, 2.7]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
+j_max: [3.0, 3.0, 3.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
 
 factor_alpha: 1.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
 
