--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -13,7 +13,7 @@ w_max: 0.0
 
 alpha_filter_dyaw: 0.99 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
 
-Ra: 8.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
+Ra: 10.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
 #x_min: -1000000000.0  # [m] don't forget the .0
 #x_max: 10000000000.0  # [m] don't forget the .0
@@ -25,18 +25,18 @@ Ra: 8.0           # [m] Radius of my planning sphere (planning horizon). Should 
 #z_max: 1000000000.0   # [m] JPS is not allowed to give a solution that goes higher than this height
 
 # highbay
-x_min: -5.0  # [m] don't forget the .0
-x_max: 5.0  # [m] don't forget the .0
+x_min: -4.1  # [m] don't forget the .0
+x_max: 4.1  # [m] don't forget the .0
 
-y_min: -4.0  # [m] don't forget the .0
-y_max: 4.25   # [m] don't forget the .0
+y_min: -4.1  # [m] don't forget the .0
+y_max: 4.1   # [m] don't forget the .0
 
-z_min: 1.0  # [m] don't forget the .0
-z_max: 3.0  # [m] don't forget the .0
+z_min: 0.9  # [m] don't forget the .0
+z_max: 4.0  # [m] don't forget the .0
 
 #For single-agent simulations
-v_max: [2.5, 2.5, 2.5]   #[m/s]  7.0
-a_max: [2.7, 2.7, 2.7]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
+v_max: [3.0, 3.0, 3.0]   #[m/s]  7.0
+a_max: [3.0, 3.0, 3.0]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
 j_max: [3.0, 3.0, 3.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
 
 factor_alpha: 1.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
@@ -44,7 +44,7 @@ factor_alpha: 1.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
 #Parameters for NLOPT
 num_pol: 4
 deg_pol: 3 #Only 3 is supported right now
-weight: 1000.0 #The .0 is needed 
+weight: 1.0 #The .0 is needed #1000.0 was default 
 epsilon_tol_constraints: 0.000001
 xtol_rel: 0.0000000000001 #negative value --> stopping criterion not used
 ftol_rel: 0.0000000001 #negative value --> stopping criterion not used
@@ -68,7 +68,7 @@ a_star_samp_z: 5
 a_star_fraction_voxel_size: 0.5 #\in [0,1] The higher, the bigger the voxel size in A* is(i.e. more prunning)
 allow_infeasible_guess: true  #whether allow infeasible guesses to be used for the optimization. If false, straight line guess will be used in the case of an infeasible guess
 
-a_star_bias: 1.0 #Bias (cost=g+bias*h) in the A* search 
+a_star_bias: 1.0 #Bias (cost=g+bias*h) in the A* search #default is 1.0
 
 basis: "MINVO"  #MINVO OR B_SPLINE or BEZIER.  This is the basis used for collision checking
 
