--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -6,7 +6,7 @@ n_agents: 16 #only used for the color in the trajectory
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
 goal_radius: 0.15    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
 drone_radius: 0.25  #(m) Used for collision checking # not used anymore replaced by drone_bbox
-drone_bbox: [0.9, 0.9, 1.5] #(m) Used for collision checking replacing drone_radius. The bounding box dimension [x y z]
+drone_bbox: [1.0, 1,0, 1.5] #(m) Used for collision checking replacing drone_radius. The bounding box dimension [x y z]
 
 #w_max: 0.4           # [rd/s] Maximum angular velocity. 0.4 for Hardware
 w_max: 0.0
@@ -35,9 +35,9 @@ z_min: 0.9  # [m] don't forget the .0
 z_max: 3.5  # [m] don't forget the .0
 
 #For single-agent simulations
-v_max: [4.0, 4.0, 4.0]   #[m/s]  7.0
-a_max: [6.0, 6.0, 6.0]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
-j_max: [8.0, 8.0, 8.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
+v_max: [1.0, 1.0, 1.0]   #[m/s]  7.0
+a_max: [2.0, 2.0, 2.0]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
+j_max: [3.0, 3.0, 3.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
 
 factor_alpha: 1.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
 
@@ -58,14 +58,14 @@ solver: "LD_MMA"
 # kappa + mu <=1 Ideally kappa + mu<1 (so that there is time for other stuff)
 upper_bound_runtime_snlopt: 0.35 #[seconds] snlopt (init guess + solver) will never take longer than this amount of seconds
 lower_bound_runtime_snlopt: 0.05 #[seconds] snlopt (init guess + solver) will never take less than this amount of seconds
-kappa: 0.3 #% of time spent to find initial guess
+kappa: 0.4 #% of time spent to find initial guess
 mu: 0.4    #% of time spent to solve the optimization
 
 # Samples in velocity for the A* guess used in the nlopt optimization problem
-a_star_samp_x: 4
-a_star_samp_y: 4
-a_star_samp_z: 4
-a_star_fraction_voxel_size: 0.5 #\in [0,1] The higher, the bigger the voxel size in A* is(i.e. more prunning)
+a_star_samp_x: 5 # odd number
+a_star_samp_y: 5 # odd number
+a_star_samp_z: 5 # odd number
+a_star_fraction_voxel_size: 0.0 #\in [0,1] The higher, the bigger the voxel size in A* is(i.e. more prunning)
 allow_infeasible_guess: true  #whether allow infeasible guesses to be used for the optimization. If false, straight line guess will be used in the case of an infeasible guess
 
 a_star_bias: 0.5 #Bias (cost=g+bias*h) in the A* search #default is 1.0
