--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -8,12 +8,12 @@ goal_radius: 0.15    #(m) Drone has arrived to the goal when distance_to_goal<GO
 drone_radius: 0.25  #(m) Used for collision checking # not used anymore replaced by drone_bbox
 drone_bbox: [0.9, 0.9, 1.5] #(m) Used for collision checking replacing drone_radius. The bounding box dimension [x y z]
 
-w_max: 0.4           # [rd/s] Maximum angular velocity. 0.4 for Hardware
-#w_max: 0.0
+#w_max: 0.4           # [rd/s] Maximum angular velocity. 0.4 for Hardware
+w_max: 0.0
 
 alpha_filter_dyaw: 0.99 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
 
-Ra: 2.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
+Ra: 10.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
 #x_min: -1000000000.0  # [m] don't forget the .0
 #x_max: 10000000000.0  # [m] don't forget the .0
@@ -32,12 +32,12 @@ y_min: -4.1  # [m] don't forget the .0
 y_max: 4.1   # [m] don't forget the .0
 
 z_min: 0.9  # [m] don't forget the .0
-z_max: 3.0  # [m] don't forget the .0
+z_max: 3.5  # [m] don't forget the .0
 
 #For single-agent simulations
 v_max: [4.0, 4.0, 4.0]   #[m/s]  7.0
-a_max: [4.0, 4.0, 4.0]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
-j_max: [4.0, 4.0, 4.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
+a_max: [6.0, 6.0, 6.0]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
+j_max: [8.0, 8.0, 8.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
 
 factor_alpha: 1.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
 
@@ -65,10 +65,10 @@ mu: 0.4    #% of time spent to solve the optimization
 a_star_samp_x: 5 # odd number
 a_star_samp_y: 5 # odd number
 a_star_samp_z: 3 # odd number
-a_star_fraction_voxel_size: 0.1 #\in [0,1] The higher, the bigger the voxel size in A* is(i.e. more prunning)
+a_star_fraction_voxel_size: 0.5 #\in [0,1] The higher, the bigger the voxel size in A* is(i.e. more prunning)
 allow_infeasible_guess: true  #whether allow infeasible guesses to be used for the optimization. If false, straight line guess will be used in the case of an infeasible guess
 
-a_star_bias: 0.1 #Bias (cost=g+bias*h) in the A* search #default is 1.0
+a_star_bias: 0.5 #Bias (cost=g+bias*h) in the A* search #default is 1.0
 
 basis: "MINVO"  #MINVO OR B_SPLINE or BEZIER.  This is the basis used for collision checking
 
