remove /trajs and make mader decentralized

--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -1,3 +1,6 @@
+# if simulatin or hex?
+sim: true
+
 use_ff: true # use feedforward
 visual: true #publish visualization stuff
 color_type: "vel" #"vel" or "plain"
