--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -18,6 +18,9 @@ alpha_filter_dyaw: 0.99 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> Mo
 
 Ra: 10.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
+expected_comm_delay: 0.2 #seconds
+simulated_comm_delay: 0.5 #seconds, should be less than expected_comm_delay
+
 #x_min: -1000000000.0  # [m] don't forget the .0
 #x_max: 10000000000.0  # [m] don't forget the .0
 
@@ -40,7 +43,7 @@ z_max: 2.0  # [m] don't forget the .0
 #For single-agent simulations
 v_max: [2.0, 2.0, 2.0]   #[m/s]  7.0
 a_max: [3.0, 3.0, 3.0]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
-j_max: [4.0, 4.0, 4.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
+j_max: [3.0, 3.0, 3.0]   #[m/s3]  #Right now it's only used for Gurobi, not for NLOPT
 
 factor_alpha: 1.5 #[-] DeltaT = factor_alpha*States_took_previous_replan
 
@@ -92,4 +95,3 @@ gamma: 0.1 #[seconds] >0 Time step between discretization points
 fov_horiz_deg: 100 #[deg] \in (0,180] ,  angle between two faces of the tetrahedron 
 fov_vert_deg: 100 #[deg] \in (0,180] ,  angle between two faces of the tetrahedron 
 fov_depth: 4.5 #[m] Should be < Ra
-
