changed how to publish traj in rviz & introdued if_delaycheck

--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -1,5 +1,7 @@
 # if simulatin or hex?
 sim: true
+# use delay_check or not?
+if_delaycheck: true
 
 use_ff: true # use feedforward
 visual: true #publish visualization stuff
