--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -1,7 +1,7 @@
 # if simulatin or hex?
 sim: true
 # use delay_check or not?
-if_delaycheck: true
+is_delaycheck: true
 
 use_ff: true # use feedforward
 visual: true #publish visualization stuff
@@ -20,7 +20,7 @@ alpha_filter_dyaw: 0.99 # #[] Filter parameter for dyaw, \in [0,1]. Higher--> Mo
 
 Ra: 10.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
-expected_comm_delay: 0.25 #seconds
+expected_comm_delay: 1.0 #seconds
 simulated_comm_delay: 0.1 #seconds, should be less than expected_comm_delay
 
 #x_min: -1000000000.0  # [m] don't forget the .0
