--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -1,9 +1,16 @@
 # if simulatin or hex?
 sim: true
+
 # need take off?
 is_take_off: false
+
+# using centralized or decentralized trajs?
+is_centralized: true
+
 # use delay check or not?
 ######is_delaycheck: true
+
+# max number of agents (not the actual number. it's max number of id)
 max_agent_number: 10
 
 use_ff: true # use feedforward
